--- a/SqlDataMapper/SqlDataMapper.csproj
+++ b/SqlDataMapper/SqlDataMapper.csproj
@@ -43,11 +43,17 @@
   <ItemGroup>
     <Compile Include="Cache.cs" />
     <Compile Include="ColumnsCache.cs" />
+    <Compile Include="DatabaseType.cs" />
     <Compile Include="DbParameterRegister.cs" />
     <Compile Include="MapperFactory.cs" />
+    <Compile Include="PagingHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Singleton.cs" />
     <Compile Include="SqlMapper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DatabaseType\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
