--- a/SqlDataMapper/SqlDataMapper.csproj
+++ b/SqlDataMapper/SqlDataMapper.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,11 +46,14 @@
     <Compile Include="ColumnsCache.cs" />
     <Compile Include="DatabaseType.cs" />
     <Compile Include="DbParameterRegister.cs" />
+    <Compile Include="ExpressionExtensions.cs" />
+    <Compile Include="FactoryCache.cs" />
     <Compile Include="MapperFactory.cs" />
     <Compile Include="PagingHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Singleton.cs" />
+    <Compile Include="SqlHelper.cs" />
     <Compile Include="SqlMapper.cs" />
   </ItemGroup>
   <ItemGroup />
